# kahootclone

./: LICENSE  README.md  craco.config.js  package-lock.json  package.json  tailwind.config.js  todo.txt
api/: Cargo.toml  quizzes.db  quizzes.db-journal  quizzes.sqbpro  restart.sql
api/src/: StructSchema.rs  db.rs  main.rs
src/: App.js  index.css  index.js
src/components/: .inputsave.js.swp  answer.js  answerRow.js  button.js  functions.js  haekchen.js  icon.js  inputsave.js  miniquestion.js  question.js  results.js  slideInDialogBox.js
src/sites/: Quiz.js  QuizCreator.js  Results.js  home.js  newQuizCreator.js
