[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0.131", features = ["derive"] }
rocket_contrib = "0.4.10"
rocket_cors = "0.5.0"
rsqlite = "1.0.0"

